purchase offer section fix

--- a/sections/purchase-event-offer.liquid
+++ b/sections/purchase-event-offer.liquid
@@ -4,8 +4,8 @@
     "settings": [
         {
             "type": "inline_richtext",
-            "label": "Title",
-            "id": "t:title"
+            "label": "t:title",
+            "id": "title"
         }
     ],
     "presets": [
