Purchase event section fix

--- a/sections/purchase-event-offer.liquid
+++ b/sections/purchase-event-offer.liquid
@@ -33,7 +33,7 @@
         {
             "type": "product",
             "label": "t:product",
-            "id": "offered_product"
+            "id": "product"
         }
     ],
     "blocks": [
