Changing the price/image when switching variation

--- a/sections/purchase-event-offer.liquid
+++ b/sections/purchase-event-offer.liquid
@@ -10,7 +10,7 @@
             <h4>{{ section.settings.title }}</h4>
         {% endif %}
 
-        <div class="purchase-product-offer-wrapper" data-product-handle="{{ offered_product.handle }}">
+        <div class="purchase-product-offer-wrapper" data-product-handle="{{ offered_product.handle }}" data-currency-code="{{ cart.currency.symbol }}">
             <div class="pdp__media">
                 {% render 'event-offer-product-media' with id: section.id, product: offered_product %}
             </div>
