--- a/sections/purchase-event-offer.liquid
+++ b/sections/purchase-event-offer.liquid
@@ -53,6 +53,9 @@
         },
         {
             "type": "_pdp-buy-buttons"
+        },
+        {
+            "type": "_sport-event-member-form"
         }
     ],
     "presets": [
