--- a/assets/theme.css
+++ b/assets/theme.css
@@ -7291,7 +7291,7 @@ deferred-media:not([data-loaded=true]) {
 }
 
 .sport-event-member-form-wrapper {
-  margin: 23px 0;
+  margin-top: 25px;
   border: var(--border);
   padding: 18px 22px;
 }
@@ -7332,6 +7332,16 @@ deferred-media:not([data-loaded=true]) {
   line-height: 1;
   text-align: center;
   transition: background .2s ease-in-out;
+}
+
+.sport-event-member-form-container {
+  overflow: hidden;
+  max-height: 700px;
+  transition: all .7s ease-in-out;
+}
+
+.sport-event-member-form-container h4 {
+  font-size: 26px;
 }
 
 /* css/theme.css */
