--- a/blocks/_sport-event-member-form.liquid
+++ b/blocks/_sport-event-member-form.liquid
@@ -57,7 +57,7 @@
 
 {% schema %}
 {
-    "name": "Test",
+    "name": "t:sections.purchase_event_offer.blocks.member_form.name",
     "settings": [
         {
             "id": "form_title",
@@ -67,7 +67,7 @@
     ],
     "presets": [
         {
-        "name": "Test"
+        "name": "t:sections.purchase_event_offer.blocks.member_form.name"
         }
     ]
 }
