Date input picker is not visible for IOS devices

--- a/blocks/_sport-event-member-form.liquid
+++ b/blocks/_sport-event-member-form.liquid
@@ -30,7 +30,7 @@
                 </div>
                 <div class="controls">
                     <label>{{ 'forms.birth_date' | t }}<sup>*</sup></label>
-                    <input type="date" name="attributes[Birth date]" required>
+                    <input type="date" name="attributes[Birth date]" lang="en" value="2025-08-11" required>
                 </div>
                 <div class="controls">
                     <label>{{ 'forms.sex' | t }}<sup>*</sup></label>
